# q_box

./: .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml  requirements-deploy.txt  requirements-dev.txt
cdk/: con_iot_rule.py  con_lambda.py  stack_q_box.py
src/agg/: lambda_function.py
src/auth/: lambda_function.py
src/publish/: lambda_function.py
src/static/: index.html
src/tools/: call_api.py
