[project]
name = "q_box"
version = "1.0.0"
description = "質問を表示するサービス"
readme = "README.md"

[tool.mypy]
# エラー時のメッセージを詳細表示
show_error_context = true
# エラー発生箇所の行数/列数を表示
show_column_numbers = true
# import 先のチェックを行わない (デフォルトだとサードパーティーライブラリまでチェックする)
ignore_missing_imports = true
# 関数定義の引数/戻り値に型アノテーション必須
disallow_untyped_defs = true
# デフォルト引数に None を取る場合型アノテーションに Optional 必須
no_implicit_optional = true
# 戻り値が Any 型ではない関数の戻り値の型アノテーションが Any のとき警告
warn_return_any = true
# mypy エラーに該当しない箇所に `# type: ignore` コメントが付与されていたら警告
# ※ `# type: ignore` が付与されている箇所は mypy のエラーを無視出来る
warn_unused_ignores = true
# 冗長なキャストに警告
warn_redundant_casts = true
# https://stackoverflow.com/questions/69890410/mypy-daemon-dmypy-and-vscode-configuration-changed-error
ignore_missing_imports_per_module = true
# 除外設定
exclude = [
    ".venv/*",
    "cdk.out/*"
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
